<resources>
    <string name="app_name">RF Pisma Demo</string>
	<string name="inventory_name">Inventory</string>
	<string name="filter_inventory_name">Filter Inventory</string>
	<string name="barcode_demo_name">Barcode Demo</string>
	<string name="read_memory_name">Read Memory</string>
	<string name="write_memory_name">Write Memory</string>
	<string name="lock_memory_name">Lock Memory</string>
	<string name="stored_tag_name">Stored Tag</string>
	<string name="option_name">RFID Option</string>
	<string name="debug_name">Debug</string>
	<string name="select_mask_name">Selection Mask</string>
	<string name="select_epc_mask_name">EPC Mask</string>
	<string name="edit_stored_tag_name">Edit Stored Tag</string>
	<string name="barcode_option_name">Barcode Option</string>
	<string name="barcode_general_option_name">General Option</string>
	<string name="barcode_enable_symbol_name">Enable/Disable Symbologies</string>
	<string name="barcode_symbol_upc_ean_name">UPC/EAN</string>
	<string name="barcode_symbol_code128_name">Code 128</string>
	<string name="barcode_symbol_code39_name">Code 39</string>
	<string name="barcode_symbol_code11_name">Code 11</string>
	<string name="barcode_symbol_interleaved2of5_name">Interleaved 2 of 5</string>
	<string name="barcode_symbol_discrete2of5_name">Discrete 2 of 5</string>
	<string name="barcode_symbol_codabar_name">Codabar</string>
	<string name="barcode_symbol_msi_name">MSI</string>
	<string name="barcode_symbol_chinese2of5_name">Chinese 2 of 5</string>
	<string name="barcode_symbol_matrix2of5_name">Matrix 2 of 5</string>
	<string name="barcode_symbol_korean2of5_name">Korean 2 of 5</string>
	<string name="barcode_symbol_us_postal_name">US Postal</string>
	<string name="barcode_symbol_uk_postal_name">UK Postal</string>
	<string name="barcode_symbol_australia_post_name">Australia Post</string>
	<string name="barcode_symbol_gs1_databar_name">GS1 DataBar</string>
	<string name="barcode_symbol_composite_name">Composite</string>
	<string name="barcode_symbol_micro_pdf417_name">Micro PDF417</string>
	<string name="barcode_symbol_data_matrix_name">Data Matrix</string>
	<string name="barcode_symbol_qr_code_name">QR Code</string>
	<string name="barcode_symbol_aztec_name">Aztec</string>
    <string name="connect_bt_device">Connect to last bluetooth device</string>
    <string name="connect_new_bt_device">Connect to new bluetooth device</string>
    <string name="connect_ble_device">Connect to BLE device</string>
    <string name="disconnect">Disconnect from device</string>
    <string name="demo_version">Demo Version</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="inventory">Inventory</string>
    <string name="filter_inventory">Filter Inventory</string>
    <string name="barcode_demo">Barcode Demo</string>
    <string name="read_memory">Read Memory</string>
    <string name="write_memory">Write Memory</string>
    <string name="tag_access">Lock Memory</string>
    <string name="stored_tag">Stored Tag</string>
    <string name="option">RFID Option</string>
    <string name="barcode_option">Barcode Option</string>
    <string name="debug">Debug</string>
    <string name="logo">ATID Co., Ltd</string>
    <string name="ble_firmware_version">BLE Version</string>
    <string name="system_error">System Error</string>
    <string name="system_alert">System Alert</string>
    <string name="bluetooth_not_supported_message">This device does not support Bluetooth.</string>
    <string name="operation_time">Operation Time</string>
    <string name="power_gain">Power Gain</string>
    <string name="display_pc">Display PC</string>
    <string name="report_rssi">Report RSSI</string>
    <string name="report_tid">Report TID</string>
    <string name="tid_length">TID Length</string>
    <string name="continuous_mode">Continuous Mode</string>
    <string name="count">Count</string>
    <string name="restart_time">Restart Time</string>
    <string name="stored_mode">Stored Mode</string>
	<string name="report_mode">Report Mode</string>
    <string name="read_memory_value">Read Memory Value</string>
    <string name="read_memory_param">Read Memory Parameters</string>
    <string name="bank">Bank</string>
    <string name="offset">Offset</string>
    <string name="length">Length</string>
    <string name="password">Password</string>
    <string name="reading_epc">Reading EPC&#8230;</string>
	<string name="reading_tag_memory">Reading Tag Memory&#8230;</string>
	<string name="stop_read_memory">Stop Read Memory&#8230;</string>
	<string name="rssi_value">RSSI</string>
	<string name="phase_value">Phase</string>
    <string name="write_memory_param">Write Memory Parameters</string>
    <string name="write_data">Write Data</string>
	<string name="writing_tag_memory">Writing Tag Memory&#8230;</string>
	<string name="stop_write_memory">Stop Write Memory&#8230;</string>
    <string name="lock_memory_param">Lock Memory Parameters</string>
    <string name="locking_tag_memory">Locking Tag memory&#8230;</string>
    <string name="stop_lock_memory">Stop Lock memory&#8230;</string>
    <string name="kill_password">Kill Password</string>
    <string name="access_password">Access Password</string>
    <string name="epc">EPC</string>
    <string name="tid">TID</string>
    <string name="user">User</string>
    <string name="set_access_password">Set Access Pwd</string>
    <string name="set_kill_password">Set Kill Pwd</string>
    <string name="set_access_password_title">Set Access Password</string>
    <string name="set_kill_password_title">Set Kill Password</string>
	<string name="input_tag_dialog">Input Tag</string>
	<string name="add_stored_tag">Add Stored Tag</string>
	<string name="edit_stored_tag">Edit Stored Tag</string>
	<string name="buzzer">Buzzer</string>
	<string name="region">Region</string>
	<string name="inventory_time">Inventory Time</string>
	<string name="idle_time">Idle Time</string>
	<string name="auto_off_time">Auto Off Time</string>
	<string name="key_action">Key Action</string>
	<string name="lbt_channel">LBT Channel</string>
    <string name="action_ok">OK</string>
    <string name="action_inventory">Inventory</string>
    <string name="action_clear">Clear</string>
    <string name="action_mask">Mask</string>
    <string name="action_epc_mask">EPC Mask</string>
    <string name="action_load">Load</string>
    <string name="action_remove">Remove</string>
	<string name="action_read_memory">Read</string>
	<string name="action_write_memory">Write</string>
	<string name="action_block_write">Block Write</string>
	<string name="action_block_erase">Erase</string>
	<string name="action_lock_tag">Lock</string>
	<string name="action_unlock_tag">Unlock</string>
	<string name="action_perma_lock_tag">PermaLock</string>
	<string name="action_kill_tag">Kill</string>
	<string name="action_cancel">Cancel</string>
	<string name="action_yes">Yes</string>
	<string name="action_stop">Stop</string>
	<string name="action_save">Save</string>
	<string name="action_default">Default</string>
	<string name="action_remove_all">Remove All</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_scan_start">Start Scan</string>
    <string name="action_scan_stop">Stop Scan</string>
    <string name="action_option">Option</string>
    <string name="action_set_symbol_state">Set Symbologies</string>
    <string name="action_set_config">Set Configuration</string>
    <string name="action_on">On</string>
    <string name="action_off">Off</string>
	<string name="connecting_reader">Connecting to device.\r\nPlease wait&#8230;</string>
	<string name="disconnecting_reader">Disconnecting to device.\r\nPlease wait&#8230;</string>
	<string name="load_selection_mask">Loading Selection Mask\r\nPlease wait&#8230;</string>
	<string name="save_selection_mask">Saving Selection Mask\r\nPlease wait&#8230;</string>
	<string name="stop_action_message">Stopping work.\r\nnPlease wait&#8230;</string>
	<string name="stop_action_fail_message">Failed to stop work.\r\nnPlease wait&#8230;</string>
	<string name="read_memory_intro_message">Tag memory to read or erase\r\nPlease click the button.</string>
	<string name="read_memory_read_message">Reading tag memory.\r\nPlease wait&#8230;</string>
	<string name="read_memory_fail_read_message">Failed to read memory&#8230;</string>
	<string name="read_memory_block_erase_message">Erasing tag memory.\r\nPlease wait&#8230;</string>
	<string name="read_memory_fail_block_erase_message">Failed to block erase&#8230;</string>
	<string name="write_memory_intro_message">Tag memory to write\r\nPlease click the button.</string>
	<string name="write_memory_write_message">Writing tag memory.\r\nPlease wait&#8230;</string>
	<string name="write_memory_fail_write_message">Failed to write memory&#8230;</string>
	<string name="write_memory_block_write_message">Block writing tag memory.\r\nPlase wait&#8230;</string>
	<string name="write_memory_fail_block_write_message">Failed to block write&#8230;</string>
	<string name="access_intro_message">Tag memory to lock or kill,\r\nPlease click the button.</string>
	<string name="access_lock_message">Locking Tag memory.\r\nPlease wait&#8230;</string>
	<string name="access_unlock_message">Unlocking Tag memory.\r\nPlease wait&#8230;</string>
	<string name="access_perma_lock_message">PermaLocking Tag memory.\r\nPlease wait&#8230;</string>
	<string name="access_kill_message">Killing Tag memory.\r\nPlease wait&#8230;</string>
	<string name="access_set_kill_password_message">Set Kill Password.\r\nPlease wait&#8230;</string>
	<string name="access_set_access_password_message">Set Access Password.\r\nPlease wait&#8230;</string>
	<string name="access_fail_lock_message">Failed to lock tag&#8230;</string>
	<string name="access_fail_unlock_message">Failed to unlock tag&#8230;</string>
	<string name="access_fail_perma_lock_message">Failed to perma lock tag&#8230;</string>
	<string name="access_fail_kill_message">Failed to kill tag&#8230;</string>
	<string name="access_fail_set_kill_password_message">Failed to Set Kill Password&#8230;</string>
	<string name="access_fail_set_access_password_message">Failed to Set Access Password&#8230;</string>
	<string name="invalid_password">Failed to invalid password&#8230;</string>
	<string name="remove_all_stored_tag_message">Remove All Sotred Tags\r\nPlease wait&#8230;</string>
	<string name="load_stored_tag_message">Load Stored Tags\r\nPlease wait&#8230;</string>
	<string name="save_stored_tag_message">Save All Stored Tags\r\nPlease wait&#8230;</string>
	<string name="load_option">Loading Option\r\nPlease wait&#8230;</string>
	<string name="save_option">Saving Option\r\nPlease wait&#8230;</string>
	<string name="load_default_option">Loading Default Option\r\nPlease wait&#8230;</string>
	<string name="load_debug_message">Loading Debug Message\r\nPlease wait&#8230;</string>
	<string name="save_debug_message">Saving Debug Message\r\nPlease wait&#8230;</string>
	<string name="select_flag">Select Flag</string>
	<string name="inventory_session">Inventory Session</string>
	<string name="session_flag">Session Flag</string>
	<string name="mask">Mask</string>
	<string name="load_debug">Load Debug</string>
	<string name="debug_mode_on">Debug Mode On</string>
	<string name="debug_mode_off">Debug Mode Off</string>
    <string name="unit_bit">bit</string>
    <string name="value_0">0</string>
    <string name="matching_mode">Not Matching</string>
    <string name="option_symbology">Symbology</string>
    <string name="default_all_symbologies">Default All Symbologies</string>
    <string name="disable_all_symbologies">Disable All Symbologies</string>
    <string name="enable_all_symbologies">Enable All Symbologies</string>
    <string name="save_symbologies">Save Symbologies</string>
</resources>