<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Tag List -->

    <ListView
        android:id="@+id/tag_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/count"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/value_0"
                android:textColor="@color/count"
                android:textSize="42sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" >

            <TableRow>

                <Button android:id="@+id/add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_add"
                    tools:ignore="ButtonStyle" />

                <Button android:id="@+id/edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_edit"
                    tools:ignore="ButtonStyle" />

            </TableRow>

            <TableRow>

                <Button android:id="@+id/remove"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_remove"
                    tools:ignore="ButtonStyle" />

                <Button android:id="@+id/clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_clear"
                    tools:ignore="ButtonStyle" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button android:id="@+id/import_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_import"
            tools:ignore="ButtonStyle" />

        <Button android:id="@+id/export_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_export"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_ok"
            tools:ignore="ButtonStyle" />

        <Button android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>