<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Mask List -->

    <ListView
        android:id="@+id/mask_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button android:id="@+id/add_mask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_add"
            tools:ignore="ButtonStyle" />
        
        <Button android:id="@+id/edit_mask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_edit"
            tools:ignore="ButtonStyle" />
        
        <Button android:id="@+id/remove_mask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_remove"
            tools:ignore="ButtonStyle" />
        
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp" />

    <!-- Select Flag -->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_flag"
            android:textColor="@color/caption_color"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/select_flag"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_weight="1" />
        
    </LinearLayout>
    
    <!-- Inventory Session -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_session"
            android:textColor="@color/caption_color"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/inventory_session"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_weight="1" />
        
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp" />
    
    <!-- Session Flag -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_flag"
            android:textColor="@color/caption_color"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/session_flag"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_weight="1" />
        
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_save"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>