<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Mask List -->

    <ListView
        android:id="@+id/mask_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/match_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:enabled="false"
            android:text="@string/matching_mode"
            android:textColor="@color/caption_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment" >

        <!-- Mask Count -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/count"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mask_count"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center"
                android:text="0"
                android:textColor="@color/count"
                android:textSize="42sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,NestedWeights" />

        </LinearLayout>

        <!-- Buttons -->

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" >

            <TableRow>

                <Button
                    android:id="@+id/add_mask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/action_add"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/edit_mask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/action_edit"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/remove_mask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/action_remove"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/clear_mask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/action_clear"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_save"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>