<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/debug_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/debug_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </ScrollView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <Button android:id="@+id/debug_mode_on"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/debug_mode_on"
                tools:ignore="ButtonStyle" />

            <Button android:id="@+id/debug_mode_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/debug_mode_off"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow>

            <Button android:id="@+id/load_debug"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/load_debug"
                tools:ignore="ButtonStyle" />

            <Button android:id="@+id/save_debug"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/action_save"
                tools:ignore="ButtonStyle" />

        </TableRow>
    </TableLayout>

</LinearLayout>