<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
   	<!-- Offset -->
   	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_gravity="left|center_vertical"
	        android:paddingRight="5dp"
	        android:text="@string/offset"
	        android:textColor="@color/caption_color"
	        android:textSize="16sp" />
	    
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
		    android:orientation="horizontal" >
	    
	        <EditText android:id="@+id/offset"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="number" />
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right|center_vertical"
		        android:text="@string/unit_bit"
		        android:textColor="@color/caption_color"
		        android:textSize="16sp" />
	        
	    </LinearLayout>

   	</LinearLayout>
	
	<View android:layout_width="fill_parent" android:layout_height="10dp" />
   		
   	<!-- Mask -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:paddingRight="5dp"
        android:text="@string/mask"
        android:textColor="@color/caption_color"
        android:textSize="16sp" />
    
    <EditText android:id="@+id/mask"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789abcdefABCDEF"
        android:inputType="textCapCharacters"
        android:maxLength="64"
        android:privateImeOptions="defaultInputmode=english"
        android:singleLine="true" />
    		
	<View android:layout_width="fill_parent" android:layout_height="10dp" />
   	
   	<!-- Length -->
   	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_gravity="left|center_vertical"
	        android:paddingRight="5dp"
	        android:text="@string/length"
	        android:textColor="@color/caption_color"
	        android:textSize="16sp" />
	    
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
		    android:orientation="horizontal" >
	    
	        <EditText android:id="@+id/length"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="number" />
	        	    
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right|center_vertical"
		        android:text="@string/unit_bit"
		        android:textColor="@color/caption_color"
		        android:textSize="16sp" />
	        		        
	    </LinearLayout>
	    	    	    
   	</LinearLayout>
	    
</LinearLayout>
